--- a/views/index.jade
+++ b/views/index.jade
@@ -6,10 +6,10 @@ block content
       div.list-group#entrylist
         div.list-group-item
           div.input-group
-            input.form-control#search(placeholder="Search for..." onkeypress="searchkey(event)")
+            input.form-control#search(placeholder="Search for…" onkeypress="searchkey(event)")
             span.input-group-btn
-              button.btn.btn-default(onclick="search()") Go!
-        if (entries.data.length > 0)
+              button.btn.btn-default(onclick="search(); return false;") Go!
+        if (entries.data!==undefined && entries.data.length > 0)
           each entry in entries.data
             a.list-group-item.entry-item(href="#" onclick="loadEntry(this, '#{entry.__unid}')") #{entry.full_name}
         else
