--- a/views/index.jade
+++ b/views/index.jade
@@ -15,7 +15,7 @@ block content
         else
           a.list-group-item.disabled(href="#") No people to display
       if (entries.count > 0)
-        +pagination(entries.start,entries.pages,entries.currentpage,'/entries/')
+        +pagination(entries.start, 5, entries.currentpage,'/entries/')
     div.col-md-8
       div#entrydata
         div.well Select a person, or create a new person using the button above.
