--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,10 +3,10 @@ html(lang='en')
   head
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
-    meta(name='description', content='Simple node.js / LDC Via demo for Engage 2016')
+    meta(name='description', content='Simple node.js / LDC Via demo')
     meta(name='author', content='Ben Poole, ben@ldcvia.com')
     meta(name='copyright', content='Copyright (c) 2016 LDC Via')
-    title= title
+    title=config.title
     link(rel='stylesheet', href='/bower_components/bootstrap/dist/css/bootstrap.min.css')
     link(rel='stylesheet', href='/bower_components/bootstrap/dist/css/bootstrap-theme.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
@@ -18,7 +18,7 @@ html(lang='en')
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.navbar-brand(href='/') Engage node.js LDC Via Demo
+          a.navbar-brand(href='/') #{config.title}
         .collapse.navbar-collapse
           ul.nav.navbar-nav
             if (tab == "home")
