Static content updated with links and contact details

--- a/views/static-about.jade
+++ b/views/static-about.jade
@@ -2,16 +2,17 @@ extends layout
 
 block content
   div.well
-    h1 About the Engage node.js LDC Via Demo
+    h1 About this LDC Via Demo
     p
-      | This demo is a simple node.js application, using Express and Jade, to render a simple person directory as part of our presentation on building applications with LDC Via. You can download the presentation, and more, from our 
-      a(href="http://ldcvia.com/downloads.html") resources page
+      | This demo is a node.js application, using Express and Jade, to render a simple person directory, used as part of presentations and a webinar on building applications with LDC Via. Some download resources:
+    ul
+      li
+        a(href="http://ldcvia.com/downloads.html") Presentations &amp; downloads
+      li
+        a(href="http://ldcvia.com/webinar.html") LDC Via Webinars
+      li
+        a(href="https://github.com/LDCVia/ldc-via-node-demo") node.js demo on GitHub
       
-    P
-      | This application uses 
-      a(href="http://ldcvia.com") LDC Via
-      |  as a back-end.
     p
-      | Come and  
-      a(href="mailto:info@ldcvia.com?subject=Engage%20demo%20enquiry") talk to us
-      |  if you want to know more!
+      a(href="mailto:info@ldcvia.com?subject=Demo%20code%20enquiry") Drop us a line
+      |  if you want to know more.
