--- a/views/static-contact.jade
+++ b/views/static-contact.jade
@@ -4,10 +4,4 @@ block content
   div.well
     h1 Contact Us
     p
-      | This application uses 
-      a(href="http://ldcvia.com") LDC Via
-      |  as a back-end.
-    p
-      | Come and  
-      a(href="mailto:info@ldcvia.com?subject=Engage%20demo%20enquiry") talk to us
-      |  if you want to know more!
+      a(href="mailto:info@ldcvia.com?subject=Demo%20code%20enquiry") Email us at LDC Via
